--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 <body id="body">
     <input id="picker" type="color" name="bg" value="#fef0ff">
     <div id="app">apply</div>
+    <input id="first" type="number">
+    <input id="second" type="number">
     <div id="container" >
         <img id="logo" src="logo.svg">
         <h1 id="desc">Match words and learn new lexica</h1>
