--- a/index.html
+++ b/index.html
@@ -19,8 +19,20 @@
 
 </head>
 <body id="body">
+   <div id="color">
     <input id="picker" type="color" name="bg" value="#fef0ff">
     <div id="app">apply</div>
+   </div> 
+   <input id="first" type="number" value="1">
+   <!-- <input id="fi" type="range"  value="50" >
+    -->
+   <input id="second" type="number" value="4996">
+   <div id="discovered" ><div>Completed words -&nbsp</div>
+   <div id="completed">0</div></div>
+   <div id="wrong_answers" ><div>Wrong answers -&nbsp</div>
+   <div id="wrong">0</div>
+</div>
+   
     <div id="container" >
         <img id="logo" src="logo.svg">
         <h1 id="desc">Match words and learn new lexica</h1>
